--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".ui.activity.account.FastLoginActivity"/>
         <activity android:name=".ui.activity.account.RegisterActivity"/>
         <activity android:name=".ui.activity.WebViewActivity"/>
+        <activity android:name=".ui.activity.mine.GoodsListActivity"/>
     </application>
 
 </manifest>
