--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     implementation 'com.github.xiaohaibin:XBanner:1.6.6'
 
     implementation 'com.github.lishide:ScrollRecyclerView:v1.0.0'
+
+    //圆形ImageView
+    implementation 'com.github.SheHuan:NiceImageView:1.0.5'
 }
