品牌详情页

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".ui.activity.home.SearchResultActivity"/>
         <activity android:name=".ui.activity.home.GoodsDetailActivity"/>
         <activity android:name=".ui.BigImageActivity"/>
+        <activity android:name=".ui.activity.home.BrandDetailActivity"/>
     </application>
 
 </manifest>
