--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,11 @@
         <activity android:name=".ui.activity.mine.EditAddressActivity"/>
         <activity android:name=".ui.activity.order.SelectPayWayActivity"/>
         <activity android:name=".ui.activity.order.PayResultActivity"/>
+        <activity android:name=".ui.activity.find.PostDetailActivity"/>
+        <activity android:name=".ui.activity.find.TopicDetailActivity"/>
+        <activity android:name=".ui.activity.find.ReportActivity"/>
+        <activity android:name=".ui.activity.find.SearchFindActivity"/>
+        <activity android:name=".ui.activity.find.SearchFindResultActivity"/>
     </application>
 
 </manifest>
