--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
 
     //圆形ImageView
     implementation 'com.github.SheHuan:NiceImageView:1.0.5'
+
+    //图片选择
+    implementation 'com.ypx.yimagepicker:androidx:3.1.4'
 }
