我的资料页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,8 @@
         <activity android:name=".ui.activity.find.PublishPostActivity"/>
         <activity android:name=".ui.activity.find.SearchGoodsForPublishPostActivity"/>
         <activity android:name=".ui.activity.find.SearchTopicForPublishPostActivity"/>
+        <activity android:name=".ui.activity.mine.MineDataActivity"/>
+        <activity android:name=".ui.activity.mine.ModifyNickNameActivity"/>
 
 
         <provider
