--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,7 @@
         <activity android:name=".ui.activity.mine.BlackListActivity"/>
         <activity android:name=".ui.activity.mine.CouponCenterActivity"/>
         <activity android:name=".ui.activity.mine.HistoricalRankingActivity"/>
-        <activity android:name=".ui.activity.mine.LeaderboardActivity"/>
+        <activity android:name=".ui.activity.mine.LeaderBoardActivity"/>
         <activity android:name=".ui.activity.mine.MessageActivity"/>
         <activity android:name=".ui.activity.mine.MineAssetsActivity"/>
         <activity android:name=".ui.activity.mine.MineBalanceActivity"/>
