--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
 
     //图片选择
     implementation 'com.ypx.yimagepicker:androidx:3.1.4'
+
+
+    implementation 'cn.yc:WebViewLib:1.2.2'
 }
