--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,9 @@ dependencies {
 
 
     implementation 'cn.yc:WebViewLib:1.2.2'
+
+
+    //    字母索引
+    implementation 'com.lwkandroid:IndexBar:1.0.1'
+    implementation "com.lwkandroid:recyclerviewadapter:1.3.7"
 }
