--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,26 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
+            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86","x86_64"
+        }
+    }
+
+    signingConfigs {
+        release {
+            keyAlias 'hanyu'
+            keyPassword '123456'
+            storeFile file('../keystore/cinderellavip.jks')
+            storePassword '123456'
+        }
+        debug {
+            keyAlias 'hanyu'
+            keyPassword '123456'
+            storeFile file('../keystore/cinderellavip.jks')
+            storePassword '123456'
+        }
     }
 
     buildTypes {
@@ -64,4 +84,9 @@ dependencies {
     //    字母索引
     implementation 'com.lwkandroid:IndexBar:1.0.1'
     implementation "com.lwkandroid:recyclerviewadapter:1.3.7"
+
+    //高德地图
+    implementation 'com.amap.api:3dmap:5.0.0'
+    implementation 'com.amap.api:location:4.7.2'
+    implementation 'com.amap.api:search:7.1.0'
 }
