--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,19 +22,13 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
 
     <!-- 允许程序读取通讯录权限 -->
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
-
-
 
     <uses-feature android:name="android.hardware.camera"
         android:required="true" />
@@ -156,6 +150,11 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"/>
         </provider>
+
+        <service android:name="com.amap.api.location.APSService"/>
+
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="ab0e75841e5375c278b52fafbde0224c">
+        </meta-data>
     </application>
 
 </manifest>
