--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -139,6 +139,7 @@
         <activity android:name=".ui.activity.life.SingleServiceOrderListActivity"/>
         <activity android:name=".ui.activity.life.SingleServiceOrderDetailActivity"/>
         <activity android:name=".ui.activity.life.SearchLifeActivity"/>
+        <activity android:name=".ui.activity.life.ServiceProjectDetailActivity"/>
 
 
         <provider
