--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,6 @@ dependencies {
     implementation 'com.amap.api:3dmap:5.0.0'
     implementation 'com.amap.api:location:4.7.2'
     implementation 'com.amap.api:search:7.1.0'
+
+    implementation 'com.nex3z:flow-layout:1.3.0'
 }
