--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         <activity android:name=".ui.activity.home.SearchResultActivity"/>
         <activity android:name=".ui.activity.home.GoodsDetailActivity"/>
         <activity android:name=".ui.BigImageActivity"/>
+        <activity android:name=".ui.activity.home.HomeCategoryListActivity"/>
         <activity android:name=".ui.activity.home.BrandDetailActivity"/>
         <activity android:name=".ui.activity.home.ShopDetailActivity"/>
         <activity android:name=".ui.activity.home.EnsureOrderActivity"/>
