--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,9 @@
         android:roundIcon="@mipmap/logo1"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.account.GuideActivity">
+        <activity android:name=".ui.activity.account.GuideActivity"
+            android:launchMode="singleTask"
+            android:theme="@style/WelComeTheme">
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
