--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -147,6 +147,7 @@
         <activity android:name=".ui.activity.life.SearchLifeActivity"/>
         <activity android:name=".ui.activity.life.ServiceProjectDetailActivity"/>
         <activity android:name=".ui.activity.life.ServiceCheckListActivity"/>
+        <activity android:name=".ui.web.AgreementWebViewActivity"/>
 
 
         <provider
