--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,6 @@ dependencies {
     implementation 'com.amap.api:search:7.1.0'
 
     implementation 'com.nex3z:flow-layout:1.3.0'
+
+    implementation 'com.luffykou:android-common-utils:1.1.3'
 }
