--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,6 +148,7 @@
         <activity android:name=".ui.activity.life.ServiceProjectDetailActivity"/>
         <activity android:name=".ui.activity.life.ServiceCheckListActivity"/>
         <activity android:name=".ui.web.AgreementWebViewActivity"/>
+        <activity android:name=".ui.activity.home.SearchListActivity"/>
 
 
         <provider
