--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,16 @@ dependencies {
     implementation 'com.nex3z:flow-layout:1.3.0'
 
     implementation 'com.luffykou:android-common-utils:1.1.3'
+
+    // 支付宝 SDK AAR 包所需的配置
+    implementation(name: 'alipaySdk-15.6.8-20191021122514', ext: 'aar')
+    implementation files('libs/wechat-sdk-android-without-mta-5.1.4.jar')
+    implementation files('libs/libammsdk.jar')
+    implementation files('libs/org.apache.http.legacy.jar')
+    implementation files('libs/umeng-common-2.1.8.jar')
+    implementation files('libs/umeng-share-QQ-simplify-6.9.6.jar')
+    implementation files('libs/umeng-share-wechat-simplify-6.9.6.jar')
+    implementation files('libs/umeng-share-core-6.9.6.jar')
+
+
 }
