--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,5 +104,7 @@ dependencies {
     implementation files('libs/umeng-share-wechat-simplify-6.9.6.jar')
     implementation files('libs/umeng-share-core-6.9.6.jar')
 
+    implementation 'top.zibin:Luban:1.1.8'
+
 
 }
