--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,13 @@ dependencies {
     implementation files('libs/umeng-share-core-6.9.6.jar')
 
     implementation 'top.zibin:Luban:1.1.8'
+    implementation 'com.google.zxing:core:3.3.0'
+
+//    # 必选，内部默认使用系统mediaplayer进行解码
+    implementation 'com.github.dueeeke.dkplayer:dkplayer-java:3.2.6'
+//    # 可选，包含StandardVideoController的实现
+//    implementation 'com.github.dueeeke.dkplayer:dkplayer-ui:3.2.6'
+    implementation project(':dkplayer-ui')
 
 
 }
