--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name='灰姑凉'
-include ':app', ':baselibrary'
+include ':app', ':baselibrary', ':dkplayer-java', ':dkplayer-ui', ':dkplayer'
