--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -105,4 +105,11 @@ dependencies {
     //极光 第一步
     implementation 'cn.jiguang.sdk:jpush:3.6.0'  // 此处以JPush 3.5.4 版本为例。
     implementation 'cn.jiguang.sdk:jcore:2.3.4'  // 此处以JCore 2.2.4 版本为例。
+
+    //版本更新
+    implementation 'com.github.xuexiangjys:XUpdate:1.1.3'
+    implementation 'com.zhy:okhttputils:2.6.2'
+    implementation 'com.github.xuexiangjys.XUtil:xutil-core:1.1.7'
+    implementation 'com.github.xuexiangjys.XUtil:xutil-sub:1.1.7'
+    implementation 'com.github.xuexiangjys.XAOP:xaop-runtime:1.0.5'  //添加依赖
 }
