优化若干细节

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,10 +90,14 @@
         <activity android:name=".ui.activity.home.BrandDetailActivity"/>
         <activity android:name=".ui.activity.home.ShopDetailActivity"/>
         <activity android:name=".ui.activity.home.EnsureOrderActivity"/>
-        <activity android:name=".ui.activity.home.SpikeListActivity"/>
-        <activity android:name=".ui.activity.mine.MineAddressActivity"/>
-        <activity android:name=".ui.activity.mine.SelectCouponActivity"/>
-        <activity android:name=".ui.activity.mine.EditAddressActivity"/>
+        <activity android:name=".ui.activity.home.SpikeListActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.MineAddressActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.SelectCouponActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.EditAddressActivity"
+            android:launchMode="singleTop"/>
         <activity android:name=".ui.activity.order.SelectPayWayActivity"/>
         <activity android:name=".ui.activity.order.PayResultActivity"/>
         <activity android:name=".ui.activity.find.PostDetailActivity"/>
@@ -105,34 +109,63 @@
         <activity android:name=".ui.activity.find.PublishPostActivity"/>
         <activity android:name=".ui.activity.find.SearchGoodsForPublishPostActivity"/>
         <activity android:name=".ui.activity.find.SearchTopicForPublishPostActivity"/>
-        <activity android:name=".ui.activity.mine.MineDataActivity"/>
-        <activity android:name=".ui.activity.mine.ModifyNickNameActivity"/>
-        <activity android:name=".ui.activity.mine.MineOrderActivity"/>
-        <activity android:name=".ui.activity.order.OrderDetailActivity"/>
-        <activity android:name=".ui.activity.mine.LogisticsActivity"/>
-        <activity android:name=".ui.activity.order.OrderCommentActivity"/>
-        <activity android:name=".ui.activity.order.ApplyReturnActivity"/>
-        <activity android:name=".ui.activity.order.ReturnListActivity"/>
-        <activity android:name=".ui.activity.order.RefundDetailActivity"/>
-        <activity android:name=".ui.activity.mine.ApplyProductSupplierResultActivity"/>
-        <activity android:name=".ui.activity.mine.ApplyProductSupplierActivity"/>
-        <activity android:name=".ui.activity.mine.BlackListActivity"/>
-        <activity android:name=".ui.activity.mine.CouponCenterActivity"/>
-        <activity android:name=".ui.activity.mine.HistoricalRankingActivity"/>
-        <activity android:name=".ui.activity.mine.LeaderBoardActivity"/>
-        <activity android:name=".ui.activity.mine.MessageActivity"/>
-        <activity android:name=".ui.activity.mine.MineAssetsActivity"/>
-        <activity android:name=".ui.activity.mine.MineBalanceActivity"/>
-        <activity android:name=".ui.activity.mine.MineCollectActivity"/>
-        <activity android:name=".ui.activity.mine.MineCouponActivity"/>
-        <activity android:name=".ui.activity.mine.MineGroupActivity"/>
-        <activity android:name=".ui.activity.mine.MineGroupDetailActivity"/>
-        <activity android:name=".ui.activity.mine.OrderTransactionActivity"/>
-        <activity android:name=".ui.activity.mine.RecommentListActivity"/>
-        <activity android:name=".ui.activity.mine.SettingActivity"/>
-        <activity android:name=".ui.activity.mine.SmallVaultActivity"/>
-        <activity android:name=".ui.activity.mine.WithDrawActivity"/>
-        <activity android:name=".ui.activity.mine.WithDrawHistoryActivity"/>
+        <activity android:name=".ui.activity.mine.MineDataActivity"
+            />
+
+        <activity android:name=".ui.activity.mine.ModifyNickNameActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.MineOrderActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.order.OrderDetailActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.LogisticsActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.order.OrderCommentActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.order.ApplyReturnActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.order.ReturnListActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.order.RefundDetailActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.ApplyProductSupplierResultActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.ApplyProductSupplierActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.BlackListActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.CouponCenterActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.HistoricalRankingActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.LeaderBoardActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.MessageActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.MineAssetsActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.MineBalanceActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.MineCollectActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.MineCouponActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.MineGroupActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.MineGroupDetailActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.OrderTransactionActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.RecommentListActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.SettingActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.SmallVaultActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.WithDrawActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.WithDrawHistoryActivity"
+            android:launchMode="singleTop"/>
         <activity android:name=".ui.activity.life.AddServiceAddressActivity"/>
         <activity android:name=".ui.activity.life.BuyLongServiceActivity"/>
         <activity android:name=".ui.activity.life.BuyServiceActivity"/>
@@ -160,10 +193,14 @@
         <activity android:name=".ui.web.AgreementWebViewActivity"/>
         <activity android:name=".ui.activity.home.SearchListActivity"/>
         <activity android:name=".ui.activity.home.ShopGoodsListActivity"/>
-        <activity android:name=".ui.activity.home.ShopGoodsCategoryActivity"/>
-        <activity android:name=".ui.activity.life.SearchLifeResultActivity"/>
-        <activity android:name=".ui.activity.mine.FriendListActivity"/>
-        <activity android:name=".ui.activity.mine.MinePotatoActivity"/>
+        <activity android:name=".ui.activity.home.ShopGoodsCategoryActivity"
+            />
+        <activity android:name=".ui.activity.life.SearchLifeResultActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.FriendListActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.mine.MinePotatoActivity"
+            android:launchMode="singleTop"/>
 
         <activity
             android:name=".wxapi.WXEntryActivity"
