--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.cinderellavip"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 7
-        versionName "1.0.6"
+        versionCode 8
+        versionName "1.0.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -116,10 +116,13 @@ dependencies {
     implementation 'cn.jiguang.sdk:jcore:2.3.4'  // 此处以JCore 2.2.4 版本为例。
 
     //版本更新
-    implementation 'com.github.xuexiangjys:XUpdate:1.1.3'
+    implementation 'com.github.xuexiangjys:XUpdate:1.1.4'
     implementation 'com.zhy:okhttputils:2.6.2'
     implementation 'com.github.xuexiangjys.XUtil:xutil-core:1.1.7'
     implementation 'com.github.xuexiangjys.XUtil:xutil-sub:1.1.7'
     implementation 'com.github.xuexiangjys.XAOP:xaop-runtime:1.0.5'
     implementation project(path: ':dkplayer-ui')  //添加依赖
+
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.3'
+
 }
