--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,8 +46,9 @@
 
 
     <application
-        android:name=".global.CinderellApplication"
-        android:allowBackup="true"
+        android:name=".global.CinderellaApplication"
+        android:allowBackup="false"
+        tools:replace="android:allowBackup"
         android:icon="@mipmap/logo1"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
@@ -55,7 +56,7 @@
         android:roundIcon="@mipmap/logo1"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        >
+        tools:ignore="UnusedAttribute">
         <activity android:name=".ui.activity.account.GuideActivity"
             android:launchMode="singleTask"
             android:theme="@style/WelComeTheme"
