集成客服和消息页面修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
 
     <application
         android:name=".global.CinderellaApplication"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="false"
         tools:replace="android:allowBackup"
         android:icon="@mipmap/logo1"
@@ -268,6 +269,21 @@
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" /> <!--Required  用户打开自定义通知栏的intent-->
                 <action android:name="cn.jpush.android.intent.CONNECTION" /><!-- 接收网络变化 连接/断开 since 1.6.3 -->
                 <category android:name="com.cinderellavip" />
+            </intent-filter>
+        </receiver>
+
+        <!-- 获取未读消息的广播接收者  推荐动态注册，安卓8.0以后不支持静态注册 -->
+
+        <receiver android:name=".service.SobotNotificationClickReceiver" >
+            <intent-filter>
+                <action android:name="sobot_unreadCountBrocast" />
+            </intent-filter>
+        </receiver>
+
+        <!--点击通知以后发出的广播接收者  推荐动态注册，安卓8.0以后不支持静态注册 -->
+        <receiver android:name=".service.SobotUnReadMsgReceiver" >
+            <intent-filter>
+                <action android:name="sobot_notification_click" />
             </intent-filter>
         </receiver>
 
