--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.1"
 
     defaultConfig {
         applicationId "com.cinderellavip"
@@ -15,7 +14,7 @@ android {
 
         ndk {
             //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
-            abiFilters "armeabi-v7a"
+            abiFilters "armeabi-v7a", 'x86', 'armeabi-v7a'
         }
 
         //
@@ -62,11 +61,27 @@ android {
         targetCompatibility = 1.8
     }
 
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
+
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+
+    implementation ('com.github.bumptech.glide:glide:4.9.0')
+    api 'com.sobot.chat:sobotsupport-glidev4:1.0.10'
+    implementation project(path: ':sobotsdk')
+
+    //AlphaIndicatorView
+    implementation('com.lzy.widget:view-core:0.1.5') {
+        exclude group: 'com.android.support'
+    }
+
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -92,7 +107,6 @@ dependencies {
     implementation 'com.amap.api:3dmap:5.0.0'
     implementation 'com.amap.api:location:4.7.2'
     implementation 'com.amap.api:search:7.1.0'
-
     implementation 'com.nex3z:flow-layout:1.3.0'
     implementation 'com.luffykou:android-common-utils:1.1.3'
     // 支付宝 SDK AAR 包所需的配置
@@ -107,14 +121,10 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.3'
     //    # 必选，内部默认使用系统mediaplayer进行解码
     implementation 'com.github.dueeeke.dkplayer:dkplayer-java:3.2.6'
-    //    # 可选，包含StandardVideoController的实现
-    //    implementation 'com.github.dueeeke.dkplayer:dkplayer-ui:3.2.6'
     implementation 'com.orhanobut:logger:2.2.0'
-
     //极光 第一步
     implementation 'cn.jiguang.sdk:jpush:3.6.0'  // 此处以JPush 3.5.4 版本为例。
     implementation 'cn.jiguang.sdk:jcore:2.3.4'  // 此处以JCore 2.2.4 版本为例。
-
     //版本更新
     implementation 'com.github.xuexiangjys:XUpdate:1.1.4'
     implementation 'com.zhy:okhttputils:2.6.2'
@@ -123,10 +133,17 @@ dependencies {
     implementation 'com.github.xuexiangjys.XAOP:xaop-runtime:1.0.5'
     implementation project(path: ':dkplayer-ui')  //添加依赖
 
-//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.3'
-
-    //客服
-    // 普通版 androidX：
-    implementation  'com.sobot.chat:sobotsdk_x:2.8.5.5'
+    configurations.all {
+        resolutionStrategy {
+            eachDependency { details ->
+                // Force all of the primary support libraries to use the same version.
+                if (details.requested.group == 'com.android.support') {
+                    if (!requested.name.startsWith("multidex")) {
+                        details.useVersion '28.0.0'
+                    }
+                }
+            }
+        }
+    }
 
 }
