1：首页解绑注册广播2：monkey测试的guide页面finish()函数bug3：申请更大内存4：店铺详情增加播放视频的功能。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,9 @@
         android:roundIcon="@mipmap/logo1"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="UnusedAttribute">
+        tools:ignore="UnusedAttribute"
+        android:largeHeap="true"
+        >
         <activity android:name=".ui.activity.account.GuideActivity"
             android:launchMode="singleTask"
             android:theme="@style/WelComeTheme"
@@ -207,6 +209,11 @@
             android:launchMode="singleTop"/>
         <activity android:name=".ui.activity.mine.MinePotatoActivity"
             android:launchMode="singleTop"/>
+
+        <activity
+            android:name=".ui.activity.VideoActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize|screenLayout"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".wxapi.WXEntryActivity"
