--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,5 +145,10 @@ dependencies {
             }
         }
     }
+    //log上传
+    //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
+    implementation 'com.tencent.bugly:crashreport:3.2.422'
+    //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.471'
 
 }
