--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
 
         ndk {
             //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
-            abiFilters "armeabi-v7a", 'x86', 'armeabi-v7a'
+            abiFilters "armeabi-v7a", "arm64-v8a", 'x86', 'x86_64'
         }
 
         //
@@ -71,9 +71,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-
-    implementation ('com.github.bumptech.glide:glide:4.9.0')
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation ('com.github.bumptech.glide:glide:4.11.0')
     api 'com.sobot.chat:sobotsupport-glidev4:1.0.10'
     implementation project(path: ':sobotsdk')
 
@@ -82,10 +81,10 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //使用baselibrary需要添加的
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
     implementation project(path: ':baselibrary')
@@ -128,8 +127,8 @@ dependencies {
     //版本更新
     implementation 'com.github.xuexiangjys:XUpdate:1.1.4'
     implementation 'com.zhy:okhttputils:2.6.2'
-    implementation 'com.github.xuexiangjys.XUtil:xutil-core:1.1.7'
-    implementation 'com.github.xuexiangjys.XUtil:xutil-sub:1.1.7'
+    implementation 'com.github.xuexiangjys.XUtil:xutil-core:1.1.8'
+    implementation 'com.github.xuexiangjys.XUtil:xutil-sub:1.1.8'
     implementation 'com.github.xuexiangjys.XAOP:xaop-runtime:1.0.5'
     implementation project(path: ':dkplayer-ui')  //添加依赖
 
