--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         //ButterKnife
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
         classpath 'com.novoda:bintray-release:0.9'
+        classpath 'com.tencent.bugly:symtabfileuploader:2.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
