--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,4 +157,6 @@ dependencies {
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
     implementation 'com.tencent.bugly:nativecrashreport:3.7.471'
 
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
 }
